--- a/options.html
+++ b/options.html
@@ -24,6 +24,10 @@
     <!--    Navigation bar-->
     <section id="navigation">
         <nav class="navbar navbar-light navbar-expand-md ">
+
+            <div style="padding-right: 2%; padding-top: 0;">
+                <a class="btn btn-info btn-sm disabled" href="#" style="align: left;">back</a>
+            </div>
             <img class="navbar-logo policeLogo" src="images/police.png" alt="police logo">
             <a class="navbar-brand brand" href="#"><b>
                     <h3 class="brand">Quarter allotment</h3>
@@ -43,6 +47,10 @@
                     <a class="nav-link" href="index.html">
                         <li class="nav-item"><b class="list">Logout</b></li>
                     </a>
+                    <a class="nav-link" href="history.html">
+                        <li class="nav-item"><b class="list">History</b></li>
+                    </a>
+
                 </ul>
             </div>
         </nav>
@@ -86,7 +94,7 @@
                 <a href="allotment.html" class="btn btn-primary btn-block active hov" role="button" aria-pressed="true">New Allotment</a>
             </div>
             <div class="col-md-4  ALM">
-                <a href="leave.html" class="btn btn-primary  btn-block active" role="button" aria-pressed="true">Leave</a>
+                <a href="#" class="btn btn-primary  btn-block active disabled" role="button" aria-pressed="true">Leave</a>
             </div>
             <div class="col-md-4  ALM">
                 <a href="maintainence.html" class="btn btn-primary btn-block active" role="button" aria-pressed="true">Maintainence</a>
@@ -98,7 +106,7 @@
         <i class="social-icon fab fa-facebook"></i>
         <i class="social-icon fab fa-twitter-square"></i>
         <i class="social-icon fab fa-instagram"></i>
-        <p> &#9400 copyright received</p>
+        <p> &#9400 copyright receive</p>
     </footer>
 
 </body>
