--- a/options.html
+++ b/options.html
@@ -63,7 +63,7 @@
         <div class="info">
             <div class="row">
                 <div class="col-6">Name:</div>
-                <div class="col-6">Aditya Diwakar Giradkar</div>
+                <div class="col-6">Fhgdrds Hadfss Nhads</div>
             </div>
             <div class="row">
                 <div class="col-6">Age:</div>
@@ -75,7 +75,7 @@
             </div>
             <div class="row">
                 <div class="col-6">Mobile no.:</div>
-                <div class="col-6">9404408640</div>
+                <div class="col-6">9948710992</div>
             </div>
             <div class="row">
                 <div class="col-6">Department:</div>
