--- a/allotment.html
+++ b/allotment.html
@@ -69,7 +69,7 @@
                 </select>
             </div>
             <div style="display: none;" id="prefrences">
-                <div class="row" style="padding-left: 0; padding-right: 0;">
+                <div class="row" style="padding-left: 5%; padding-right: 0; ">
                     <div class="col-lg-3 col-sm-6">
                         <div class="form-group">
                             <label>Prefrence 1</label>
