--- a/history.html
+++ b/history.html
@@ -47,10 +47,10 @@
    
 
     <section>
-        <div class="container" style="margin-top: 1%;">
+        <div class="container-fluid" style="margin-top: 1%; padding-left: 0; padding-right: 0;">
             <div class="jumbotron" style="padding-top: 1%;">
                 <div class="list-group">
-                    <a href="#" class="list-group-item list-group-item-action">maharashtra  police<span style="float: right;"><small>3 days ago</small></span></a>
+                    <a href="#" class="list-group-item list-group-item-action">Cras justo odio<span style="float: right;"><small>3 days ago</small></span></a>
                     <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in<span style="float: right;"><small>3 days ago</small></span></a>
                     <a href="#" class="list-group-item list-group-item-action">Morbi leo risus<span style="float: right;"><small>3 days ago</small></span></a>
                     <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac<span style="float: right;"><small>3 days ago</small></span></a>
