--- a/maintainence.html
+++ b/maintainence.html
@@ -61,8 +61,7 @@
         <form action="options.html">
             <h2 class="form-heading" style="text-align: center; padding-bottom: 4%">Maintainence Form</h2>
             <div class="form-group allot">
-                <label for="Address" style="text-align: left;"><b>Address</b></label>
-                <input type="text" class="form-control" id="Address" placeholder="Provide Complete Address" required>
+                <label for="Address" style="text-align: left;"><b>Address : </b>Ganesh Nagar part-1, flat no.-29, Bibewadi, Pune - 411037. </label>
             </div>
 
             <!--check boxes-->
@@ -112,7 +111,7 @@
                 <textarea class="form-control" id="sugestion" rows="3"></textarea>
             </div>
             <div class="form-group allot">
-                <label for="images"><b>Images</b></label>
+                <label for="images"><b>Images(Optional)</b></label>
                 <input type="file" class="form-control-file" id="images">
             </div>
             <div class="allot" style="text-align: center;">
