--- a/allotment.html
+++ b/allotment.html
@@ -74,7 +74,7 @@
                 <div class="row" style="padding-left: 5%; padding-right: 0; ">
                     <div class="col-lg-3 col-sm-6">
                         <div class="form-group">
-                            <label>Prefrence 1</label>
+                            <label><small><b>Prefrence 1</b></small></label>
                             <select class="form-control">
                                 <option>Dhantoli</option>
                                 <option>Sita Bardi</option>
@@ -87,7 +87,7 @@
                     </div>
                     <div class="col-lg-3 col-sm-6">
                         <div class="form-group">
-                            <label>Prefrence 2</label>
+                            <label><small><b>Prefrence 2</b></small></label>
                             <select class="form-control">
                                 <option>Dhantoli</option>
                                 <option>Sita Bardi</option>
@@ -100,7 +100,7 @@
                     </div>
                     <div class="col-lg-3 col-sm-6">
                         <div class="form-group">
-                            <label>Prefrence 3</label>
+                            <label><small><b>Prefrence 3</b></small></label>
                             <select class="form-control">
                                 <option>Dhantoli</option>
                                 <option>Sita Bardi</option>
@@ -113,7 +113,7 @@
                     </div>
                     <div class="col-lg-3 col-sm-6">
                         <div class="form-group">
-                            <label>Prefrence 4</label>
+                            <label><small><b>Prefrence 4</b></small></label>
                             <select class="form-control">
                                 <option>Dhantoli</option>
                                 <option>Sita Bardi</option>
