--- a/allotment.html
+++ b/allotment.html
@@ -26,7 +26,7 @@
         <nav class="navbar navbar-light navbar-expand-md">
             <img class="navbar-logo policeLogo" src="images/police.png" alt="police logo">
             <a class="navbar-brand" href="#"><b>
-                    <h3 class="brand">Quarter allotment</h3>
+                    <h3 class="brand">Quarter Allotment</h3>
                 </b></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#options" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -74,7 +74,7 @@
                 <div class="row" style="padding-left: 5%; padding-right: 0; ">
                     <div class="col-lg-3 col-sm-6">
                         <div class="form-group">
-                            <label><small><b>Prefrence 1</b></small></label>
+                            <label><small><b>Preference 1</b></small></label>
                             <select class="form-control">
                                 <option>Dhantoli</option>
                                 <option>Sita Bardi</option>
@@ -87,7 +87,7 @@
                     </div>
                     <div class="col-lg-3 col-sm-6">
                         <div class="form-group">
-                            <label><small><b>Prefrence 2</b></small></label>
+                            <label><small><b>Preference 2</b></small></label>
                             <select class="form-control">
                                 <option>Dhantoli</option>
                                 <option>Sita Bardi</option>
@@ -100,7 +100,7 @@
                     </div>
                     <div class="col-lg-3 col-sm-6">
                         <div class="form-group">
-                            <label><small><b>Prefrence 3</b></small></label>
+                            <label><small><b>Preference 3</b></small></label>
                             <select class="form-control">
                                 <option>Dhantoli</option>
                                 <option>Sita Bardi</option>
@@ -113,7 +113,7 @@
                     </div>
                     <div class="col-lg-3 col-sm-6">
                         <div class="form-group">
-                            <label><small><b>Prefrence 4</b></small></label>
+                            <label><small><b>Preference 4</b></small></label>
                             <select class="form-control">
                                 <option>Dhantoli</option>
                                 <option>Sita Bardi</option>
@@ -132,7 +132,7 @@
                 <input type="file" class="form-control-file" id="OfficialLetter" required>
             </div>
             <div class="form-group allot">
-                <label for="Sugestion"><b>Suggetion / Additional Requirements</b></label>
+                <label for="Sugestion"><b>Suggestion / Additional Requirements</b></label>
                 <textarea class="form-control" id="sugestion" rows="3"></textarea>
             </div>
             <div style="text-align: center">
