--- a/options.html
+++ b/options.html
@@ -105,7 +105,7 @@
             </div>
             
             <div class="col-md-6  ALM">
-                <a href="maintainence.html" class="btn btn-primary btn-block active" role="button" aria-pressed="true">Maintainence</a>
+                <a href="maintainence.html" class="btn btn-primary btn-block active" role="button" aria-pressed="true">Maintenance</a>
             </div>
         </div>
     </div>
