--- a/maintainence.html
+++ b/maintainence.html
@@ -59,7 +59,7 @@
     <!--Form-->
     <div class="container allotment">
         <form action="options.html">
-            <h2 class="form-heading" style="text-align: center; padding-bottom: 4%">Maintainence Form</h2>
+            <h2 class="form-heading" style="text-align: center; padding-bottom: 4%">Maintenance Form</h2>
             <div class="form-group allot">
                 <label for="Address" style="text-align: left;"><b>Address : </b>Ganesh Nagar part-1, flat no.-29, Bibewadi, Pune - 411037. </label>
             </div>
@@ -83,7 +83,7 @@
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="Garbedge">
                         <label class="form-check-label" for="GArbedge">
-                            Garbedege
+                            Garbage
                         </label>
                     </div>
                     <div class="form-check">
@@ -95,7 +95,7 @@
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="trafic">
                         <label class="form-check-label" for="trafic">
-                            Trafic
+                            Traffic
                         </label>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
 
             <!--text boxes-->
             <div class="form-group allot">
-                <label for="discription"><b>Brif dricription of problem</b></label>
+                <label for="discription"><b>Brief discription of problem</b></label>
                 <textarea class="form-control" id="discription" rows="2" required></textarea>
             </div>
             <div class="form-group allot">
@@ -115,7 +115,7 @@
                 <input type="file" class="form-control-file" id="images">
             </div>
             <div class="allot" style="text-align: center;">
-                <input class="btn btn-primary active" type="submit" name="submit" value="complaintent">
+                <input class="btn btn-primary active" type="submit" name="submit" value="complaint">
             </div>
         </form>
     </div>
