--- a/maintainence.html
+++ b/maintainence.html
@@ -82,7 +82,7 @@
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="Garbedge">
-                        <label class="form-check-label" for="GArbedge">
+                        <label class="form-check-label" for="Garbedge">
                             Garbage
                         </label>
                     </div>
