changes done (home button work, history)

--- a/maintainence.html
+++ b/maintainence.html
@@ -35,11 +35,14 @@
 
             <div class="collapse navbar-collapse" id="options">
                 <ul class="navbar-nav ml-auto">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="options.html">
                         <li class="nav-item"><b class="list">Home</b></li>
                     </a>
                     <a class="nav-link" href="mailto:adityagiradkar11@gmail.com">
                         <li class="nav-item"><b class="list">contact</b></li>
+                    </a>
+                    <a class="nav-link" href="history.html">
+                        <li class="nav-item"><b class="list">History</b></li>
                     </a>
                     <a class="nav-link" href="index.html">
                         <li class="nav-item"><b class="list">Logout</b></li>
